Changed the title to remove the linebreak between title and subtitle.

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,6 +1,6 @@
 
 
-\begin{abstract}
+\begin{unbcabstract}
 \begin{comment}
 \par This document proposes a different approach to improving and broadening the power, expressibility and capability of the purely functional programming language \progLang{Haskell}  by combining and extending the methodologies used for embedding languages into one another and marrying and/or merging and/or combining different programming paradigms. The proposal discusses the act of extending \progLang{Haskell} with logic programming capabilities similar to those of \progLang{Prolog}, a logic programming language. The embeddings and paradigm integrations are more or less towards declarative languages.
 \end{comment}
@@ -37,5 +37,5 @@ developing an extension which replicates the target language and utilises the ad
 efficient implementation.      
 
        
-\end{abstract}
+\end{unbcabstract}
 
