--- a/proposal.tex
+++ b/proposal.tex
@@ -62,7 +62,7 @@
 %
 % Give values to the variables used in this document
 %
-\setTitle{Embedding Programming Languages: \\* \textsc{Prolog} in \textsc{Haskell}}
+\setTitle{Embedding Programming Languages: \textsc{Prolog} in \textsc{Haskell}}
 \setMajor{Computer Science}
 \edef\calMonth{\ifcase \the \month\or
   January   \or
