re-ordered the front matter to conform to unbc style.

--- a/proposal.tex
+++ b/proposal.tex
@@ -141,15 +141,15 @@
       %% Supply your credentials 
       \textit{\color{red} Mehul's previous degree information}}
       
-		\tableofcontents
-        \newpage
-		\listoffigures
-		\newpage
-		\listoftables
-		\newpage
-        % Generate the abstract
-        \input{abstract.tex}
-	\end{frontmatter}
+      \input{abstract.tex}%
+      \unbctableofcontents
+      \newpage
+      \listoftables
+      \newpage
+      \listoffigures
+      \newpage
+      % Generate the abstract
+    \end{frontmatter}
 
 \linenumbers
 
