Fixed minted options in proto1.tex .

--- a/proto1.tex
+++ b/proto1.tex
@@ -30,7 +30,7 @@ Two terms can be unified if they are the same or the variables can be assigned t
 The possibilities could be,
 \begin{enumerate}
 \item If term1 and term2 are constants, then term1 and term2 unify if and only if they are the same atom, or the same number.
-\begin{minted}[lineno]{prolog}
+\begin{minted}[linenos]{prolog}
 ?-  =(mia,mia).
 yes
 \end{minted}
@@ -38,13 +38,13 @@ yes
 \item If term1 is a variable and term2 is any type of term, then term1 and term2 unify, and term1 is instantiated to term2 . Similarly, if 
 term2 is a variable and term1 is any type of term, then term1 and term2 unify, and term2 is instantiated to term1 . (So if they are both 
 variables, they’re both instantiated to each other, and we say that they share values.)
-\begin{minted}[lineno]{prolog}
+\begin{minted}[linenos]{prolog}
 ?-  mia  =  X.
 X  =  mia 
 yes
 \end{minted}
 
-\begin{minted}[lineno]{prolog}
+\begin{minted}[linenos]{prolog}
 ?-  X  =  Y. 
 yes
 \end{minted}
@@ -58,7 +58,7 @@ yes
 
 \item the variable instantiations are compatible.
 \end{enumerate}
-\begin{minted}[lineno]{prolog}
+\begin{minted}[linenos]{prolog}
 ?-  k(s(g),Y)  =  k(X,t(k)).
 X  =  s(g) 
 Y  =  t(k) 
