updated toDo.text ... fixed workCompleted.tex .

--- a/toDo.tex
+++ b/toDo.tex
@@ -81,6 +81,10 @@
   have?).
   (Search for \Verb!%% Supply your credentials! in \Verb!proposal1.tex!\,.)
 
+\item
+  The abstract is too long. UNBC guidelines limit Masters' theses
+  abstracts to 150 words.
+
 \item [\textbf{David}]
 \item Clean up the non-exclusive license page in unbcthesis.cls
 \item Incorporate unbcthesis.cls into Mehul's work.
