--- a/results.tex
+++ b/results.tex
@@ -1,5 +1,5 @@
 
-\documentclass[proposal.tex]{subfiles} 
+\documentclass[thesis-solanki.tex]{subfiles}
 
 \begin{document}
 \chapter{Results}\label{sect:results}
