--- a/proto2.1.tex
+++ b/proto2.1.tex
@@ -5,6 +5,105 @@
 
 \section{Prototype 2.1}{\label{proto2.1}}
 
+\subsection{About this chapter}
+This chapter attempts to infuse the generic methodology from \ref{proto1} in a current \progLang{Prolog} implementation \cite{prolog-lib}
+and make the unification "monadic".
+
+\subsection{How prolog-0.2.0.1 works}
+
+The original syntax used by the library,
+
+\begin{minted}[linenos]{haskell}
+data Term = Struct Atom [Term]
+          | Var VariableName
+          | Wildcard -- Don't cares 
+          | Cut Int
+      deriving (Eq, Data, Typeable)
+
+data Clause = Clause { lhs :: Term, rhs_ :: [Goal] }
+            | ClauseFn { lhs :: Term, fn :: [Term] -> [Goal] }
+      deriving (Data, Typeable)
+
+rhs :: Clause -> [Term] -> [Goal]      
+rhs (Clause   _ rhs) = const rhs
+rhs (ClauseFn _ fn ) = fn
+
+data VariableName = VariableName Int String
+      deriving (Eq, Data, Typeable, Ord)
+
+type Atom         = String
+type Goal         = Term
+type Program      = [Clause]
+\end{minted} 
+
+The above language suffers from most of the problems discussed in the previous chapter.
+
+The above is used to construct \progLang{Prolog} "terms" which are of a "single type".   
+
+A database is used to store the terms which can then be used to resolve a query.
+
+An interpreter to solve a query and lastly the unifier,
+
+\begin{minted}[linenos]{haskell}
+unify, unify_with_occurs_check :: MonadPlus m => Term -> Term 
+-> m Unifier
+
+unify = fix unify'
+
+unify_with_occurs_check =
+   fix $ \self t1 t2 -> if (t1 `occursIn` t2 || t2 `occursIn` t1)
+                           then fail "occurs check"
+                           else unify' self t1 t2
+ where
+   occursIn t = everything (||) (mkQ False (==t))
+
+unify' :: MonadPlus m => (Term -> Term -> m Unifier) -> Term -> 
+Term -> m [(VariableName, Term)]
+
+-- If either of the terms are don't cares then no unifiers exist
+unify' _ Wildcard _ = return []
+unify' _ _ Wildcard = return []
+
+-- If one is a variable then equate the term to its value which 
+-- forms the unifier
+unify' _ (Var v) t  = return [(v,t)]
+unify' _ t (Var v)  = return [(v,t)]
+
+-- Match the names and the length of their parameter list and 
+-- then match the elements of list one by one. 
+unify' self (Struct a1 ts1) (Struct a2 ts2) 
+            | a1 == a2 && same length ts1 ts2 = 
+            unifyList self (zip ts1 ts2)
+
+unify' _ _ _ = mzero
+
+same :: Eq b => (a -> b) -> a -> a -> Bool
+same f x y = f x == f y
+
+-- Match the elements of each of the tuples in the list. 
+unifyList :: Monad m => (Term -> Term -> m Unifier) -> 
+[(Term, Term)] -> m Unifier
+unifyList _ [] = return []
+unifyList unify ((x,y):xys) = do
+   u  <- unify x y
+   u' <- unifyList unify (Prelude.map (both (apply u)) xys)
+   return (u++u')
+\end{minted}  
+
+
+There are a few other components such as the REPL, Parser. 
+
+
+\subsection{What we do in this prototype?}
+
+
+\subsection{Current implementation (prolog-0.2.0.1)}
+
+
+\subsection{Modifications}
+
+
+\subsection{Results}
 
 
 
