added metasyntacticvariables, proto 1, 2.1, 3, 4

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1307,3 +1307,52 @@ month = {January},
 year = {2012},
 url = {http://www.learnprolognow.org/lpnpage.php?pagetype=html&pageid=lpn-htmlse24}
 }
+@misc{website:metasyntacticvariableswiki,
+title = {Metasyntactic Variable},
+author = {Wikipedia},
+month = {October},
+year = {2015},
+url = {https://en.wikipedia.org/wiki/Metasyntactic_variable}
+}
+@misc{webiste:metasyntacticvariablescatb,
+title = {Metasynatactic Variables},
+author = {Catb},
+month = {},
+year = {},
+url = {http://www.catb.org/jargon/html/M/metasyntactic-variable.html}
+}
+@misc{webiste:metasyntacticvariableswhatistectarget,
+title = {Metasynatactic Variables},
+author = {What is Tech Target},
+month = {September},
+year = {2005},
+url = {http://whatis.techtarget.com/definition/metasyntactic-variable}
+}
+@misc{webste:metasyntacticvariablesc2wiki,
+title = {Metasyntactic variables},
+author = {c2 wiki},
+month = {September},
+year = {2011},
+url = {http://c2.com/cgi/wiki?MetasyntacticVariable}
+}
+@misc{website:prologunification,
+title = {Prolog Unification},
+author = {Joshua Eckroth},
+month = {April},
+year = {2014},
+url = {http://cse3521.artifice.cc/prolog-unification.html}
+}
+@misc{website:prologresolution,
+title = {Prolog Resolution},
+author = {Joshua Eckroth},
+month = {April},
+year = {2014},
+url = {http://cse3521.artifice.cc/prolog-resolution.html}
+}
+@comment{website:,
+title = ,
+author = ,
+month = ,
+year = ,
+url = 
+}
