--- a/metasyntacticvariables.tex
+++ b/metasyntacticvariables.tex
@@ -5,12 +5,34 @@
 \section{Meta Syntactic Variables}\label{sect:metasyntacticvariables}
 
 Some sources for the topic 
-\url{https://en.wikipedia.org/wiki/Metasyntactic_variable}
 
-\url{http://www.catb.org/jargon/html/M/metasyntactic-variable.html}
 
-\url{http://whatis.techtarget.com/definition/metasyntactic-variable}
+\cite{website:metasyntacticvariableswiki}
+A metasyntactic variable is a placeholder name used in computer science, a word without meaning intended to be substituted by some objects pertaining to the context where it is used. The word foo as used in IETF Requests for Comments is a good example.
+By mathematical analogy, a metasyntactic variable is a word that is a variable for other words, just as in algebra letters are used as variables for numbers.Any symbol or word which does not violate the syntactic rules of the language can be used as a metasyntactic variable.
 
+
+
+
+\cite{webiste:metasyntacticvariablescatb}
+A name used in examples and understood to stand for whatever thing is under discussion, or any random member of a class of things under discussion. The word foo is the canonical example. To avoid confusion, hackers never (well, hardly ever) use ‘foo’ or other words like it as permanent names for anything. In filenames, a common convention is that any filename beginning with a metasyntactic-variable name is a scratch file that may be deleted at any time.
+
+Metasyntactic variables are so called because they are variables in the metalanguage used to talk about programs etc; they are variables whose values are often variables (as in usages like “the value of f(foo,bar) is the sum of foo and bar”). However, it has been plausibly suggested that the real reason for the term “metasyntactic variable” is that it sounds good. To some extent, the list of one's preferred metasyntactic variables is a cultural signature. They occur both in series (used for related groups of variables or objects) and as singletons. Here are a few common signatures:
+
+
+\cite{webiste:metasyntacticvariableswhatistectarget}
+In programming, a metasyntactic (which derives from meta and syntax ) variable is a variable (a changeable value) that is used to temporarily represent a function . Examples of metasyntactic variables include (but are by no means limited to) ack, bar , baz, blarg, wibble, foo , fum, and qux. Metasyntactic variables are sometimes used in developing a conceptual version of a program or examples of programming code written for illustrative purposes.
+
+Any filename beginning with a metasyntactic variable denotes a scratch file. This means the file can be deleted at any time without affecting the program.
+
+
+
+\cite{webste:metasyntacticvariablesc2wiki}
+
+A word, used in conversation or text that is meant as a variable. There is a fairly standard set in the ComputerScience culture. People tend to create their own if they are not exposed to others, which can be confusing. Of course, if you haven't seen them before they can be quite confusing. They are, however, useful enough that this is not enough reason to give them up.
+Standard set: foo, bar, baz, foobar/quux, quuux, quuuux, ....
+
+example: "Suppose I have a list, foo, with a node, bar, ..."
 
 
 
