--- a/proto1.tex
+++ b/proto1.tex
@@ -106,6 +106,8 @@ The language defined is recursive in nature.
 We convert it into a non recursive data type.
 
 
+Basically we do Unification monadically.
+
   
 
 
