updated toDo.tex .

--- a/toDo.tex
+++ b/toDo.tex
@@ -16,6 +16,11 @@
   work.}
 
 \begin{enumerate}
+\item [\textbf{2015-10-29}]
+\item Abstract is too long and incorrect.
+\item Remove first \P{} from intro.
+\item Thesis statement is close to being an abstract.
+
 \item [\textbf{Either}]
 \item Rename ``\Verb!proposal.*!'' to ``\Verb!thesis-solanki.*!''.
 \item Switch the thesis style to UNBC thesis style.  (Not urgent, if
