Added content to contributions about the prototypes

--- a/abstract.tex
+++ b/abstract.tex
@@ -36,6 +36,14 @@ aims at adding logic programming features which are native to \progLang{Prolog} 
 developing an extension which replicates the target language and utilises the advanced features of the host for an 
 efficient implementation.      
 
+\section{Thesis Statement}
+
+The thesis aims to provide insights into merging two declarative languages namely, \progLang{Haskell} and \progLang{Prolog} by embedding 
+the latter into the former and analysing the result of doing so as they have conflicting characteristics. The finished product will be 
+something like a \textit{haskellised} \progLang{Prolog} which has logical programming like capabilities.       
+
+We explore embedding domain specific languages in \progLang{Haskell} 
+
        
 \end{unbcabstract}
 
