--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -139,7 +139,7 @@
       \unbcthesistitle{\theTitle
       }{\theAuthor}{\theDegree}{\theMajor}{\theMonth}{\theYear}{%
       %% Supply your credentials 
-      \textit{\color{red} Mehul's previous degree information}}
+      \textit{\color{red} Bachelor of Engineering in Computer Science and Engineering Mumbai University 2012}}
       
       \input{abstract.tex}%
       \unbctableofcontents
