test from mac after rebase issue

--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -90,6 +90,8 @@ adding custom variables
 monadic unification (stuff happens in a bubble)
 rec type $\rightarrow$ non rec type $\rightarrow$ fix non rec type isomorphically == rec type
 
+You can make an Flatterm int
+
 
 
 
