--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -139,9 +139,9 @@
       \unbcthesistitle{\theTitle
       }{\theAuthor}{\theDegree}{\theMajor}{\theMonth}{\theYear}{%
       %% Supply your credentials 
-      \textit{\color{red} Bachelor of Engineering in Computer Science and Engineering Mumbai University 2012}}
+      {B.Eng, Mumbai University, 2012}}
       
-      \input{abstract.tex}%
+      \input{abstract}%
       \unbctableofcontents
       \newpage
       \listoftables
