textual changes cherry-picked from b3fa004 .

--- a/introduction.tex
+++ b/introduction.tex
@@ -6,6 +6,7 @@
 %----------------------------------------------------------------------------
 \chapter{Introduction}\label{chap:introduction}
 %----------------------------------------------------------------------------
+\begin{comment}
 \section{Beginnings}
 Computers have become a part of everyone's life. From the ones in our pockets to the ones on desks or in our school bags, working or in fact living without 
 them is difficult if not impossible. All the more reason to know how to use one. Simply speaking just using a computer these days is not enough. To be able 
@@ -20,6 +21,8 @@ popularity. The methodologies that have stood out are the Functional and Logical
 while the latter is based on Horn Clause Logic. Each of them has its own advantages and ﬂaws. How does one choose which approach to adopt? Perhaps
 one does not need to choose! This document looks at the attempts, improvements and future possibilities of uniting \progLang{Haskell}, a Purely 
 Functional Programming Language and \progLang{Prolog}, a Logical Programming Language so that one is not forced to choose.
+
+\end{comment}
 
 \section{Thesis Statement}
 
@@ -122,7 +125,7 @@ the two languages into one tight package with the best of both and maybe even th
 
 
 %----------------------------------------------------------------------------
-\section{Proposal Organization}
+\section{Thesis Organization}
 
 The next chapter, \chapterReference{chap:proposedWork}{Chapter 2} provides details about the short comings of the previous works and the road to a 
 better future. \chapterReference{chap:background}{Chapter 3}, the background talks about the programming paradigms and languages in general and 
