--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -92,7 +92,9 @@ rec type $\rightarrow$ non rec type $\rightarrow$ fix non rec type isomorphicall
 
 You can make an Flatterm int
 
+but you cannot make term int
 
+adding quantifiers 
 
 
 \item Prototype 2 does
