--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -285,8 +285,8 @@
   	\subfile{relatedWork}
 	\clearpage
 	
-	\subfile{eplipl}	
-	\clearpage
+%	\subfile{eplipl}	
+%	\clearpage
 		
 	\subfile{prologin}
 	\clearpage
@@ -294,11 +294,11 @@
 	\subfile{prologinhaskell}
 	\clearpage
 		
-	\subfile{ummcpp}
-	\clearpage
+%	\subfile{ummcpp}
+%	\clearpage
 			
-	\subfile{flpl}	
-	\clearpage
+%	\subfile{flpl}	
+%	\clearpage
 		
 	\subfile{quasiquotation}
 	\clearpage
@@ -306,8 +306,8 @@
 	\subfile{metasyntacticvariables}
 	\clearpage
 	
-	\subfile{relatedtermskeywords}
-	\clearpage
+%	\subfile{relatedtermskeywords}
+%	\clearpage
 		
 	\subfile{hwh}
 	\clearpage
@@ -315,34 +315,34 @@
 	\subfile{pwp}
 	\clearpage
 		
-	\subfile{miscrelcon}
-	\clearpage
+%	\subfile{miscrelcon}
+%	\clearpage
   	
-  	\subfile{proto1}
-  	\clearpage
+  \subfile{proto1}
+  \clearpage
   	
-  	\subfile{proto2.1}
-  	\clearpage
+  \subfile{proto2.1}
+  \clearpage
   	
-  	\subfile{proto2.2}
-  	\clearpage
+%  \subfile{proto2.2}
+%  \clearpage
   	
-  	\subfile{proto3}
-  	\clearpage
+  \subfile{proto3}
+  \clearpage
   	
-  	\subfile{proto4}
-  	\clearpage
+  \subfile{proto4}
+  \clearpage
   	
-  	\subfile{workCompleted}
+  \subfile{workCompleted}
 	\clearpage	
 	
 	\subfile{results}
 	\clearpage
 			
-  	\subfile{conclusion}
+	\subfile{conclusion}
 	\clearpage
 
-  	\input{toDo}
+  \input{toDo}
 	\clearpage
 
 
