--- a/embedding.tex
+++ b/embedding.tex
@@ -14,12 +14,13 @@ general.
 %Embedding a programming language into another, in this we talk about embedding Prolog in Haskell.
 %The following are the sources or related work that can be found,
 
+
 \section{The Informal Content from Blogs, Articles and Internet Discussions}
 
-Before moving on to the formal content such as publications, modules and libraries it is time to get \textit{street 
-smart}. This subsection takes a look at the information, thoughts and discussions that are currently taking place 
-from time to time on the internet. A lot of interesting content is generated which has often led to some formal 
-content.   
+Before moving on to the formal content such as publications, modules and libraries let's take a look at some of 
+the unofficially published content. This subsection takes a look at the information, thoughts and discussions that 
+are currently taking place from time to time on the internet. A lot of interesting content is generated which has 
+often led to some formal content.   
 
 \par A lot has been talked about embedding languages and also the techniques and methods to do so. It might not 
 seem such a hot topic as such but it has always been a part of any programming language to work and integrate 
@@ -515,5 +516,102 @@ Another important aspect of \progLang{Prolog} is backtracking. To simulate it in
 \end{enumerate}
 \end{description}
 \end{comment}
+
+
+\section{\textbf{From chap 7}}
+
+Embedding a language into another language has been explored with a variety of languages. Attempts have been made to build Domain Specific Languages from the host languages \cite{hudak1996building}, Foriegn Function Interfaces \cite{barzilay2004foreign} 
+
+Creating a programming language from scratch is a tedious task requiring ample amount of programming, not to mention the effort required in 
+designing. A typical procedure would consist of formulating characteristics and properties based on the following points,
+
+\begin{enumerate}
+\item Syntax
+\item Semamtics
+\item Standard Library
+\item Runtime Sytsem
+\item Parsers
+\item Code Generators
+\item Interpreters
+\item Debuggers
+\end{enumerate}
+
+A lot of the above can be skipped or taken from the base language if an embedding approach is chosen. For an embedded domain specific 
+language the functionality is translated and written as an add on. The result can be thought of as a library. But the  
+difference between an ordinary library and an eDSl is the feature set provided and the degree of embedding 
+\cite{website:eDSLhaskellwiki}. For example, reading a file and parsing its contents to perform certain operations to return 
+\textit{string} results is a shallow form of embedding as the generation of code, results is not native nor are the functions processing 
+them dealing with embedded data types as such. On the other hand, building data structures in the base language which represent the 
+target language expression would be called a deep embedding approach.         
+
+\par The snippet of \progLang{Haskell} code below describes \progLang{Prolog} entities,
+
+\begin{minted}[linenos]{haskell}
+data Term = Struct Atom [Term]
+          | Var VariableName
+          | Wildcard
+          | PString   !String
+          | PInteger  !Integer
+          | PFloat    !Double
+          | Flat [FlatItem]
+          | Cut Int
+      deriving (Eq, Data, Typeable)
+\end{minted}
+
+The above can be described as concrete syntax for the "new" language and can be used to write a program.  
+
+
+As discussed in the 
+
+\section{Theory}
+\begin{enumerate}
+%------------------------------------------------------------------------------------------------------------------------------------
+\item Papers
+\begin{enumerate}
+\item Embedding an interpreted language using higher-order functions, \cite{ramsey2003embedding}
+\item Building domain-specific embedded languages, \cite{hudak1996building}
+\item Embedded interpreters, \cite{benton2005embedded}
+\item Cayenne -- a Language With Dependent Types, \cite{Augustsson98cayenne--}
+\item Foreign interface for PLT Scheme, \cite{barzilay2004foreign}
+\item Dot-Scheme: A PLT Scheme FFI for the .NET framework, \cite{pinto2003dot}
+\item Application-specific foreign-interface generation, \cite{reppy2006application}
+\item Embedding S in other languages and environments, \cite{lang2001embedding}
+\end{enumerate}
+%------------------------------------------------------------------------------------------------------------------------------------
+\item Books
+\begin{enumerate}
+\item ?????????
+\end{enumerate}
+%------------------------------------------------------------------------------------------------------------------------------------
+\item Articles / Blogs / Discussions
+\begin{enumerate}
+\item Embedding one language into another, \cite{website:lambda-the-ultimate-2}
+\item Application-specific foreign-interface generation, \cite{website:lambda-the-ultimate-3}
+\item Linguistic Abstraction, \cite{audklangembedd}
+\item LISP, Unification and Embedded Languages, \cite{ummlisp}
+\end{enumerate}
+%------------------------------------------------------------------------------------------------------------------------------------
+\item Websites
+\begin{enumerate}
+\item Embedding SWI-Prolog in other applications, \cite{swipembedd}
+\end{enumerate}
+%------------------------------------------------------------------------------------------------------------------------------------
+\end{enumerate}
+
+\section{Implementations}
+\begin{enumerate}
+\item Lots of them I guess
+\end{enumerate}
+
+\section{Important People}
+\begin{enumerate}
+\item ????
+\end{enumerate}
+
+\section{Miscellaneous / Possibly Related Content}
+\begin{enumerate}
+\item ????
+\end{enumerate}
+
 
 \end{document}
