--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -198,5 +198,57 @@ List of Functional Logic Languages
 
 \end{comment}
 
+\section{\textbf{From chap 9}}
+
+Unifying / Marrying / Merging / Combining Programming Paradigms / Theories
+\section{Theory}
+\begin{description}
+
+\item[$\bullet$] Papers
+\begin{enumerate}
+\item Unifying Theories of Programming with Monads, \cite{gibbons2013unifying}
+
+\item Symposium on Unifying Theories of Programming, 2006, \cite{DBLP:conf/utp/2006}.
+
+\item Symposium on Unifying Theories of Programming, 2008, \cite{DBLP:conf/utp/2008}.
+
+\item Symposium on Unifying Theories of Programming, 2010, \cite{DBLP:conf/utp/2010}.
+
+\item Symposium on Unifying Theories of Programming, 2012, \cite{DBLP:conf/utp/2012}.
+
+\end{enumerate}
+
+\item[$\bullet$] Books
+\begin{enumerate}
+\item Unifying Theories of Programming, \cite{hoare1998unifying}
+\end{enumerate}
+
+\item[$\bullet$] Articles / Blogs / Discussions
+\begin{enumerate}
+\item ???
+\end{enumerate}
+
+\item[$\bullet$] Websites
+\begin{enumerate}
+\item ???
+\end{enumerate}
+
+\end{description}
+
+
+\section{Implementations}
+\begin{enumerate}
+\item Scala
+\item Virgil
+\item CLOS, Common Lisp Object System
+\item Visual Prolog
+\item ????
+\end{enumerate}
+
+\section{Miscellaneous / Possibly Related Content}
+\begin{enumerate}
+\item ???
+\end{enumerate}
+
 
 \end{document}
